second commit fixed body so that it wraps correctly and doesn't leave white space

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /* -------  General Styles ------- */
 
 body {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   font-family: "Lato", sans-serif;
 }
 
